# event-manager-django

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  pyproject.toml
src/event/: admin.py  event_schema_decorator.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
src/event_manager/: __init__.py  celery.py  settings.py  urls.py
src/user/: serializers.py  urls.py  user_cschema_decorators.py  views.py
